# fastapi_test_db

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 8a5002af8d0a_inital_migrations.py
app/: config.py  docker-compose.yml  main.py
app/services/: db.py
app/services/transactions/: models.py  routes.py  schemas.py
app/tests/: conftest.py  test_a_test.py
app/tests/database_fixtures/: transactions.yaml
