[tool.poetry]
name = "testing_with_database"
version = "0.1.0"
description = ""
authors = ["Brandon Braner <brandon.braner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
pytest = "^7.1.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
black = "^22.1.0"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
sqlalchemy_seed = "^0.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
